<resources>
    <string name="app_name">Another Term</string>
    <string name="msg_feature_class_not_found">%s: Android has no implementation for it…</string>
    <string name="state_off">Off</string>
    <string name="state_on">On</string>
    <string name="state_disabled">Disabled</string>
    <string name="state_enabled">Enabled</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_close">Close</string>
    <string name="action_hide">Hide</string>
    <string name="action_unset">Unset</string>
    <string name="action_set">Set</string>
    <string name="action_delete">Delete</string>
    <string name="action_erase">Erase</string>
    <string name="action_erase_all">Erase all</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_view">View</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_share">Share</string>
    <string name="action_copy_by_uri">Copy by URI (as a file)</string>
    <string name="action_share_by_uri">Share by URI (as a file)</string>
    <string name="value_not_set"><i>Not set</i></string>
    <string name="action_charset">Character Set</string>
    <string name="action_settings">Settings</string>
    <string name="action_saved_passwords_settings">Saved Passwords</string>
    <string name="action_ssh_keys_settings">SSH Keys Settings</string>
    <string name="action_new_favorite">New Favorite</string>
    <string name="conntype_uart" translatable="false">UART</string>
    <string name="conntype_ssh" translatable="false">SSH</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard</string>
    <string name="msg_connecting___">Connecting…</string>
    <string name="msg_connected">Connected</string>
    <string name="msg_disconnected">Disconnected</string>
    <string name="optimized">Optimized</string>
    <string name="not_optimized">Not Optimized</string>
    <string name="hint_user">user</string>
    <string name="hint_host">host</string>
    <string name="hint_port">port</string>
    <string name="msg_connection_closed_by_server">Connection closed by server</string>
    <string name="msg_connection_closed_by_client">Connection closed by client</string>
    <string name="msg_password_for_host_s">Password for host %s</string>
    <string name="msg_password_for_host_change_s_s">Password for host %1$s must be changed: %2$s</string>
    <string name="msg_passphrase_for_key_s">Passphrase for key %s</string>
    <string name="action_settings_keepalive_and_battery_optimization">Session Keep-Alive and Battery Optimization</string>
    <string name="desc_doze"><![CDATA[
        <p>If the Wake Lock does not help to keep a network connection open
        or local terminal applications running
        when your phone is left alone for a long time,
        turning off the battery optimization
        in the Battery Optimization Settings could be an option.</p>
        <p><b>Warning: </b>Battery usage could be increased significantly.</p>
        <br/>
        <p><b>Details:</b></p>
        <ul>
            <li><a href=\"https://tamingthedroid.com/battery-optimization-doze-mode\">https://tamingthedroid.com/battery-optimization-doze-mode</a></li>
            <li><a href=\"https://developer.android.com/training/monitoring-device-state/doze-standby\">https://developer.android.com/training/monitoring-device-state/doze-standby</a></li>
        </ul>
    ]]></string>
    <string name="msg_unable_to_open_doze_settings">
        Unable to open the Battery Optimization settings screen on this device.
        You can navigate to it manually though if available.
    </string>
    <string name="action_device_storage_access_permission">Device Storage Access Permission</string>
    <string name="desc_device_storage_access"><![CDATA[
        <p><b>This permission affects the local shell feature only.</b></p>
        <p>If you want to have access to the public device storage locations from the local shell,
        you need to enable Android storage access permission for this application.</p>
        <p><b>Warning:</b> As long as you can run ANY binary… Just a warning.</p>
        <p><b>Warning:</b> The application\'s shared directory
        is accessible even without this permission. (see the
        <a href=\"info:/shell_env_man\"><code>SHARED_DATA_DIR</code> environment variable</a>)</p>
        <p><b>Note: </b>The application will likely be terminated with all of its running sessions
        in the moment this setting is switched from the <i>on</i> to <i>off</i> state.
        It is an Android behavior.</p>
    ]]></string>
    <string name="msg_unable_to_open_app_settings">
        Unable to open the application settings screen on this device.
        You can navigate to it manually though if available.
    </string>
    <string name="action_add_fav">Add Favorite</string>
    <string name="label_name">Name</string>
    <string name="label_type">Type</string>
    <string name="new_favorite">New Favorite</string>
    <string name="edit_favorite_s">Edit Favorite `%s\'</string>
    <string name="new_favorite_from_s">New Favorite From `%s\'</string>
    <string name="number_expected">Number expected</string>
    <string name="field_must_not_be_empty">Must not be empty</string>
    <string name="there_are_active_terminals">There are active terminals</string>
    <string name="there_are_active_session_startups">Trying to start a session by an intent…</string>
    <string name="there_are_in_memory_stored_passwords">There are in-memory stored passwords</string>
    <string name="action_clone">Clone</string>
    <string name="action_terminate">Terminate</string>
    <string name="prompt_terminate_the_session">Terminate the session?</string>
    <string name="hint_port_mapping"><![CDATA[[bind_addr:]src_port[>dst_host[:dst_port]][;…]]]></string>
    <string name="desc_port_mapping_str"><![CDATA[
<p><code>${hint_port_mapping}</code></p>
<p><b>bind_addr</b>
<br/>Special values:<ul>
<li><code>*</code> &#x2014; all interfaces / IPV4&amp;6*</li>
<li><code>localhost</code> &#x2014; loopback / IPV4&amp;6*</li>
</ul><code>localhost</code> if omitted.</p>
<p><b>src_port</b>
<br/>Special values:<ul>
<li>0 &#x2014; auto-assign (<i>dst_port</i> must be specified)</li>
</ul></p>
<p><b>dst_host</b>
<br/><code>localhost</code> if omitted.</p>
<p><b>dst_port</b>
<br/><i>src_port</i> if omitted.</p>
<p><b>Notes</b>
<ul type=\"none\">
<li>* &#x2014; It depends on the device <code>java.net.ServerSocket</code> implementation
for the local port forwarding.</li>
</ul></p>
    ]]></string>
    <string name="label_charset">Charset</string>
    <string name="title_activity_favorite_editor">Favorite Editor</string>
    <string name="title_terminal_s_link_s">Terminal %2$s link `%1$s\'</string>
    <string name="msg_saved">Saved</string>
    <string name="msg_cloned">Cloned</string>
    <string name="msg_favorite_s_is_already_exists_replace">Favorite `%s\' is already exists. Replace?</string>
    <string name="do_you_want_to_delete_this_favorite">Do you want to delete this favorite?</string>
    <string name="msg_favorite_deleted">Favorite deleted</string>
    <string name="action_about">About</string>
    <string name="label_terminal_string">Terminal string</string>
    <string name="label_execute_">Execute:</string>
    <string name="label_shell">shell</string>
    <string name="label_keepalive_interval_">KeepAlive Interval:</string>
    <string name="time_unit_seconds">seconds</string>
    <string name="msg_desc_permission_revoked">It looks like the access permission has been revoked.</string>
    <string name="msg_desc_file_not_found">File not found.</string>
    <string name="msg_desc_malformed__s">It looks malformed: %s</string>
    <string name="msg_clipboard_does_not_contain_applicable_settings">Clipboard does not contain applicable settings</string>
    <string name="title_activity_key_mappings">Key Mappings</string>
    <string name="title_activity_color_mappings">Color Mappings</string>
    <string name="action_add">Add</string>
    <string name="none">None</string>
    <string name="action_term_key_mapping">Key Mapping</string>
    <string name="action_term_color_mapping">Color Mapping</string>
    <string name="prompt_overwrite">Overwrite?</string>
    <string name="msg_name_must_not_be_empty">Name must not be empty</string>
    <string name="title_license">License</string>
    <string name="conntype_local">Local Terminal</string>
    <string name="title_info">Info</string>
    <string name="desc_not_found"><![CDATA[<h1>Not Found</h1>]]></string>
    <string name="desc_rendering___"><![CDATA[<h1>Rendering…</h1>]]></string>
    <string name="conntype_telnet" translatable="false">Telnet</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_saved_passwords">Saved Passwords</string>
    <string name="title_ssh_keys_settings">SSH Keys Settings</string>
    <string name="label_in_memory_saved_passwords">In-memory</string>
    <string name="label_key_map">Key Map</string>
    <string name="label_color_map">Color Map</string>
    <string name="label_background">Background</string>
    <string name="label_host_keys">Host Keys</string>
    <string name="unit_ms" translatable="false">ms</string>
    <string name="unit_sp" translatable="false">sp</string>
    <string name="unit_dp" translatable="false">dp</string>
    <string name="action_settings_terminal">Terminal</string>
    <string name="msg_cannot_parse_uri">Cannot parse URI</string>
    <string name="msg_cannot_access_clipboard">Cannot access clipboard</string>
    <string name="msg_nothing_to_copy_to_clipboard">Nothing to copy to clipboard</string>
    <string name="msg_too_large_to_copy_to_clipboard">Too large to copy to clipboard.</string>
    <string name="msg_too_large_to_web_search">The text is too large for Web search.</string>
    <string name="action_terminal_screen">Terminal Screen</string>
    <string name="action_help">Help</string>
    <string name="label_keymode_normal">Normal</string>
    <string name="label_keymode_application">Application (DEC?KM)</string>
    <string name="label_save_as_">Save as:</string>
    <string name="label_key_">Key:</string>
    <string name="action_info">Info</string>
    <string name="action_app_info">Application Info</string>
    <string name="action_info_page">Info Page</string>
    <string name="action_settings_plugins">Plugins</string>
    <string name="label_enabled">@string/state_enabled</string>
    <string name="label_always_accessible">Always accessible</string>
    <string name="label_application_icon">Application Icon</string>
    <string name="action_custom_font">Custom Font</string>
    <string name="sample_text">The quick brown fox…</string>
    <string name="action_pick_font">Pick font</string>
    <string name="action_remove_font">Remove font</string>
    <string name="label_baudrate">Baud Rate</string>
    <string name="label_mod_shift" translatable="false">Shift</string>
    <string name="label_mod_alt" translatable="false">Alt</string>
    <string name="label_mod_control" translatable="false">Ctrl</string>
    <string name="action_toggle_wake_lock">Toggle Wake Lock</string>
    <string name="label_key_modifiers">Modifiers</string>
    <string name="hint_do_not_change">do not change</string>
    <string name="label_data_bits">Data Bits</string>
    <string name="label_stop_bits">Stop Bits</string>
    <string name="label_parity">Parity</string>
    <string name="label_flow_control">Flow Control</string>
    <string name="action_scratchpad">Scratchpad</string>
    <string name="action_settings_hardware_keys_mapping">Hardware keys mapping</string>
    <string name="action_search_up">Search up</string>
    <string name="action_search_down">Search down</string>
    <string name="desc_case_sense">Case sensitivity</string>
</resources>