<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_charset"
        android:title="@string/action_charset" />

    <item
        android:id="@+id/action_keymap"
        android:title="@string/action_term_key_mapping" />

    <item
        android:id="@+id/action_terminal_screen"
        android:title="@string/action_terminal_screen" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="200"
        android:title="@string/action_help" />

    <item
        android:id="@+id/action_toggle_wake_lock"
        android:orderInCategory="200"
        android:title="@string/action_toggle_wake_lock" />

    <item
        android:orderInCategory="200"
        android:title="@string/action_terminate">
        <menu>
            <item
                android:id="@+id/action_terminate"
                android:title="@string/action_confirm" />
        </menu>
    </item>

</menu>
