<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="green_green_avk.anotherterm.SettingsActivity$TerminalPreferenceFragment"
        android:icon="@drawable/ic_computer"
        android:title="@string/action_settings_terminal" />
    <header
        android:fragment="green_green_avk.anotherterm.HwKeyMapEditorFragment"
        android:icon="@drawable/ic_keyboard_black"
        android:title="@string/action_settings_hardware_keys_mapping" />
    <header
        android:fragment="green_green_avk.anotherterm.CustomFontsFragment"
        android:icon="@drawable/ic_font"
        android:title="@string/action_custom_font" />
    <header
        android:fragment="green_green_avk.anotherterm.PluginsManagerFragment"
        android:icon="@drawable/ic_check"
        android:title="@string/action_settings_plugins" />

</preference-headers>
