<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_li3"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ctrl"
        style="@style/AppSettingsTableHeaderTextStyle"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/bg_frame2"
        android:gravity="center"
        android:text="@string/label_mod_control" />

    <TextView
        android:id="@+id/alt"
        style="@style/AppSettingsTableHeaderTextStyle"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/bg_frame2"
        android:gravity="center"
        android:text="@string/label_mod_alt" />

    <TextView
        android:id="@+id/shift"
        style="@style/AppSettingsTableHeaderTextStyle"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/bg_frame2"
        android:gravity="center"
        android:text="@string/label_mod_shift" />

    <EditText
        android:id="@+id/normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/none"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/none"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions" />

</LinearLayout>
