<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/sample"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/sample_text"
        app:autoSizeTextType="uniform" />

    <ImageButton
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_grid_btn"
        android:contentDescription="@string/action_pick_font"
        app:srcCompat="@android:drawable/ic_menu_more" />

    <ImageButton
        android:id="@+id/unset"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_grid_btn"
        android:contentDescription="@string/action_remove_font"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</LinearLayout>
