<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/field_margin"
    android:layout_marginBottom="@dimen/field_margin"
    android:background="@drawable/list_item_btn_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:contentDescription="@string/label_application_icon"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Space
            android:layout_width="@dimen/text_separator"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            tools:text="Title" />

    </LinearLayout>

    <Button
        android:id="@+id/package_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_grid_btn"
        android:drawableLeft="@drawable/ic_mark_copy"
        android:drawableRight="@drawable/ic_mark_copy"
        android:textSize="8sp"
        android:typeface="monospace"
        tools:ignore="RtlHardcoded,SmallSp"
        tools:text="package" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        app:alignItems="center"
        app:dividerDrawable="@drawable/sp_text"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_end"
        app:showDivider="middle"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textColor="@color/colorHintWarning"
            android:visibility="gone"
            app:layout_flexGrow="1"
            tools:text="Warning"
            tools:visibility="visible" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            app:alignItems="center"
            app:dividerDrawable="@drawable/sp_text"
            app:flexDirection="row"
            app:flexWrap="nowrap"
            app:justifyContent="flex_end"
            app:showDivider="middle"
            tools:ignore="RtlHardcoded">

            <CheckBox
                android:id="@+id/essential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_always_accessible" />

            <CheckBox
                android:id="@+id/enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_enabled"
                app:layout_flexShrink="0" />

            <ImageButton
                android:id="@+id/appInfo"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:background="@drawable/bg_grid_btn"
                android:contentDescription="@string/action_app_info"
                android:scaleType="fitCenter"
                app:layout_flexShrink="0"
                app:srcCompat="@drawable/ic_info"
                app:tint="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/info"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:background="@drawable/bg_grid_btn"
                android:contentDescription="@string/action_info_page"
                android:scaleType="fitCenter"
                app:layout_flexShrink="0"
                app:srcCompat="@drawable/ic_help"
                app:tint="@color/colorPrimary" />

        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>
